Created unit tests for activity instance